--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   src: url(/Clip.ttf);
 }
 body {
-  background-color: #141114;
+  background-color: #312b31;
   background-image: linear-gradient(335deg, black 23px, transparent 23px),
     linear-gradient(155deg, black 23px, transparent),
     linear-gradient(335deg, black 23px, transparent),
@@ -30,7 +30,7 @@ body {
   font-family: "clip";
   text-transform: uppercase;
   text-decoration: underline;
-  font-size: 12vw;
+  font-size: 8vw;
   color: #ffe6ff;
   text-shadow: 0 0 0.6rem #ff65bd, 0 0 1.5rem #ff65bd,
     -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
